[package]
name = "base"
version = "0.1.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
thiserror = "1"
log = "0.4"
pretty_env_logger = "0.4"
mqtt4bytes = { path = "../../rumqtt/mqtt4bytes" }
tokio = { version = "=0.3", features = ["full"] }
bytes = "0.6"
prost = "0.6"
pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }
